--- a/style.css
+++ b/style.css
@@ -9,24 +9,61 @@ html, body {
     background-color: #ffffff;
 }
 .grid-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr 1fr ;
-    grid-gap: 10px;
+   /* display: grid;
+   grid-template-columns: repeat(2, 1fr);
+   gap: 1rem 1rem; */
 
+   display: grid;
+   /* grid-template-columns: auto auto auto auto; */
+   grid-template-columns: repeat(12, 127px);
+   grid-template-rows:repeat(4, 200px);
+   justify-content: center;
+   align-items: center;
 }
+
+
+
+
+
+
+
+/* 
+.one {
+ grid-row-start: 3;   
+ grid-row-end: 5;   
+} */
+
+
+
 
 .grid-item {
-    height:100px;
     background: greenyellow;
+    font-size: 78px;
 }
 
 
-@media (max-width: 768px) {
-    .grid-container {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-gap: 10px;
-    
-    }  
+
+.one {
+    /* grid-column-start: 2;
+    grid-column-end: 4; */
+    grid-column: 1/5;
+    grid-row: 1/5;
+}
+.two {
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 4;
+    grid-column-end: 4;
+}
+
+.three {
+    grid-row-start: 3;
+    grid-row-end: 4;
+    grid-column-start: 5;
+    grid-column-end: 6;
+}
+.four {
+    grid-row-start: 4;
+    grid-row-end: 5;
+    grid-column-start: 6;
 }
